# bzkf-kafkatopic-splitter

./: Cargo.toml  Dockerfile  README.md  compose.example.yml
src/: main.rs
