[package]
name = "bzkf-kafkatopic-splitter"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
rdkafka = { version = "0.31", features = ["cmake-build", "libz-static"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "4.1"
tokio = { version = "1.28", features = ["default", "macros", "rt-multi-thread"] }

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"
