[package]
name = "bzkf-kafkatopic-splitter"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
rdkafka = { version = "0.33", features = ["cmake-build", "libz-static"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "4.2"
tokio = { version = "1.29", features = ["default", "macros"] }

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"
